--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,8 @@ author:
   - 'Douglas Christopher Wilson <doug@somethingdoug.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  HTTP::Request: 0
+  HTTP::Response: 0
   IO::String: 0
   Test::Exception: 0.03
   Test::More: 0
