Added internal handling of sending back a response object if a handler failed

--- a/META.yml
+++ b/META.yml
@@ -29,8 +29,10 @@ provides:
     version: 0.001
 requires:
   Carp: 0
+  HTTP::Date: 0
   HTTP::Headers: 0
   HTTP::Response: 0
+  HTTP::Status: 5.817
   LWP::UserAgent: 0
   Scalar::Util: 0
   Sub::Install: 0.90
