--- a/META.yml
+++ b/META.yml
@@ -32,6 +32,7 @@ provides:
     version: 0.001
 requires:
   Carp: 0
+  HTTP::Config: 5.815
   HTTP::Date: 0
   HTTP::Headers: 0
   HTTP::Response: 0
