--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,18 @@
 ---
-abstract: 'Override the LWP::UserAgent to return canned'
+abstract: 'Override the LWP::UserAgent to return canned responses for testing'
 author:
   - 'Douglas Christopher Wilson <doug@somethingdoug.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
   HTTP::Request: 0
   HTTP::Response: 0
   IO::String: 0
   LWP::UserAgent: 0
   Test::Exception: 0.03
   Test::More: 0
+  Test::Requires: 0.02
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.92'
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3601'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,10 +26,10 @@ no_index:
 provides:
   Test::Override::UserAgent:
     file: lib/Test/Override/UserAgent.pm
-    version: 0.002
+    version: 0.002_001
   Test::Override::UserAgent::Scope:
     file: lib/Test/Override/UserAgent/Scope.pm
-    version: 0.002
+    version: 0.002_001
 requires:
   Carp: 0
   HTTP::Config: 5.815
@@ -46,9 +45,9 @@ requires:
   Try::Tiny: 0
   URI: 0
   namespace::clean: 0.04
-  perl: 5.8.1
+  perl: 5.008001
 resources:
   homepage: http://github.com/dougwilson/perl5-test-override-useragent/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/dougwilson/perl5-test-override-useragent.git
-version: 0.002
+version: 0.002_001
