--- a/META.yml
+++ b/META.yml
@@ -7,12 +7,12 @@ build_requires:
   HTTP::Response: 0
   IO::String: 0
   LWP::UserAgent: 0
-  Test::Exception: 0.03
+  Test::Fatal: 0
   Test::More: 0
   Test::Requires: 0.02
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3601'
+generated_by: 'Module::Build version 0.3607'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
