--- a/META.yml
+++ b/META.yml
@@ -12,8 +12,8 @@ build_requires:
   Test::More: 0.88
   Test::Requires: 0.02
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0.31
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
